# FuncViz

./: .gitignore  CMakeLists.txt  Doxyfile.cmake  README.org  cloc.sh  config.hpp.cmake  configure.sh  funcviz_config.hpp.cmake  mrptree_config.hpp.cmake
docs/: QuickStart.html  QuickStart.org  changelog.html  changelog.org  roadmap.html  roadmap.org
docs/doxygen/html/: _m_r__cell__cplx_8hpp.html  _m_r__cell__cplx_8hpp_source.html  _m_r__rect__tree_8hpp.html  _m_r__rect__tree_8hpp_source.html  _m_r__rt__to__cc_8hpp.html  _m_r__rt__to__cc_8hpp_source.html  _m_r_p_t_poly_8hpp.html  _m_r_p_t_poly_8hpp_source.html  _m_r_p_tree_8hpp.html  _m_r_p_tree_8hpp_source.html  _m_r_poly_8hpp.html  _m_r_poly_8hpp_source.html  annotated.html  bug.html  classes.html  classmjr_1_1_m_r__cell__cplx-members.html  classmjr_1_1_m_r__cell__cplx.html  classmjr_1_1_m_r__rect__tree-members.html  classmjr_1_1_m_r__rect__tree.html  classmjr_1_1_m_r__rt__to__cc-members.html  classmjr_1_1_m_r__rt__to__cc.html  classmjr_1_1_m_r_p_t_poly-members.html  classmjr_1_1_m_r_p_t_poly.html  classmjr_1_1_m_r_p_tree-members.html  classmjr_1_1_m_r_p_tree.html  classmjr_1_1_m_r_poly-members.html  classmjr_1_1_m_r_poly.html  dir_d9e670a2d885dd196e319b6d49042dab.html  doxygen_crawl.html  ex_func_8hpp_source.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_type.html  functions_vars.html  menudata.js  pages.html  structmjr_1_1_m_r_p_t_poly_1_1pnt__less-members.html  structmjr_1_1_m_r_p_t_poly_1_1pnt__less.html  (+6 more)
docs/doxygen/html/search/: all_1.js  all_10.js  all_2.js  all_3.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  enums_0.js  enums_1.js  enums_3.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_0.js  (+35 more)
docs/func-viz/: .#func-viz.org  MRPTree-core.html  MRPTree-core.org  func-viz.html  func-viz.org  meta.org  src2listing.sh  src2org.sh
docs/func-viz/media/: complex_magnitude_surface_rot_100.html  complex_magnitude_surface_rot_100_crf30.html  complex_magnitude_surface_rot_100_crf30.webm  complex_magnitude_surface_rot_25.html  complex_magnitude_surface_rot_25_crf30.html  complex_magnitude_surface_rot_25_crf30.webm  complex_magnitude_surface_rot_50.html  complex_magnitude_surface_rot_50_crf30.html  complex_magnitude_surface_rot_50_crf30.webm  ear_surface_glue_rot_100_crf30.html  ear_surface_glue_rot_25_crf30.html  ear_surface_glue_rot_25_crf30.webm  ear_surface_glue_rot_50_crf30.html  ear_surface_rot_100_crf30.html  ear_surface_rot_25_crf30.html  ear_surface_rot_50_crf30.html  ear_surface_rot_50_crf30.webm  holy_wave_surf_rot_100_crf30.html  holy_wave_surf_rot_25_crf30.html  holy_wave_surf_rot_50_crf30.html  implicit_surface_rot_100_crf30.html  implicit_surface_rot_100_crf30.webm  implicit_surface_rot_25_crf30.html  implicit_surface_rot_50_crf30.html  implicit_surface_rot_50_crf30.webm  implicit_surface_rt_rot_100.html  implicit_surface_rt_rot_25.html  implicit_surface_rt_rot_25.webm  implicit_surface_rt_rot_50.html  lorenz_rot_100_crf30.html  lorenz_rot_25.html  lorenz_rot_25_crf30.html  lorenz_rot_50_crf30.html  parametric_curve_3d_frames*.html  parametric_curve_3d_rot_100_crf30.html  parametric_curve_3d_rot_100_lossless.html  parametric_curve_3d_rot_25_crf30.html  parametric_curve_3d_rot_25_crf30.webm  parametric_curve_3d_rot_25_lossless.html  parametric_curve_3d_rot_50_crf30.html  (+18 more)
docs/func-viz/misc/: movie_template.html
docs/tree_theory/: trees.html  trees.org
examples/: README.org  complex_magnitude_surface.cpp  curve_plot.cpp  ear_surface.cpp  ear_surface_glue.cpp  funcviz_config.cpp  hello_MRaster.cpp  hello_world.cpp  holy_wave_surf.cpp  implicit_curve_2d.cpp  implicit_surface.cpp  mrptree_config.cpp  parametric_curve_3d.cpp  parametric_surface_with_defects.cpp  performance_with_large_surface.cpp  surface_branch_glue.cpp  surface_plot_corner.cpp  surface_plot_edge.cpp  surface_plot_step.cpp  surface_with_normals.cpp  trefoil.cpp  vector_field_3d.cpp
ftests/: flat_test_tree_01.cpp  float_diff.rb  nan_solver.cpp  run_tests.sh  segment_folder.cpp  triangle_folder.cpp
lib/: MR_cell_cplx.hpp  MR_rect_tree.hpp  MR_rt_to_cc.hpp  README.org  zzz_tbd_tmp.cpp
misc/: maple_hat.txt  maple_sphere.txt  maple_step.txt  mathematica_anan.txt  mathematica_hat.txt  mathematica_sphere.txt  mathematica_step.txt  matlab_hat.txt  matlab_sphere.txt
paraview/: #readme.org#  .#readme.org  complex_magnitude_surface.pvsm  complex_magnitude_surface.vtu  complex_magnitude_surface_rot_100_crf30.webm  complex_magnitude_surface_rot_25_crf30.webm  complex_magnitude_surface_rot_50_crf30.webm  curve_plot.pvsm  curve_plot.vtu  ear_surface.pvsm  ear_surface_glue.pvsm  ear_surface_rot_25_crf30.webm  hello_MRaster.pvsm  hello_world.pvsm  holy_wave_surf.pvsm  holy_wave_surf_rot_25_crf30.webm  implicit_curve_2d.pvsm  implicit_curve_2d.vtu  implicit_surface.pvsm  implicit_surface_rot_25_crf30.webm  parametric_curve_3d-crv.vtu  parametric_curve_3d-srf1.vtu  parametric_curve_3d-srf2.vtu  parametric_curve_3d.pvsm  parametric_curve_3d_rot_50_crf30.webm  parametric_surface_with_defects-rect.vtu  parametric_surface_with_defects-tri.vtu  parametric_surface_with_defects.pvsm  performance_with_large_surface.pvsm  performance_with_large_surface.vtu  readme.org  surface_branch_glue.pvsm  surface_branch_glue.vtu  surface_plot_annular_edge.pvsm  surface_plot_annular_edge.vtu  surface_plot_corner.pvsm  surface_plot_corner.vtu  surface_plot_cornerX.vtu  surface_plot_corner_rot_50_crf30.webm  surface_plot_edge.pvsm  (+5 more)
raster/: complex_color_image.txt
utests/: README.org  check_cell_hexahedron.cpp  check_cell_pyramid.cpp  check_cell_quad.cpp  check_cell_segment.cpp  check_cell_triangle.cpp  geomi_pnt_line_distance.cpp  geomi_seg_isect_type.cpp  geomr_pnt_line_distance.cpp  geomr_pnt_pln_distance.cpp  geomr_pnt_tri_distance.cpp  tree_basics_15b1.cpp  tree_basics_15b3.cpp  tree_basics_7b1.cpp  tree_basics_7b2.cpp  tree_basics_7b3.cpp  tree_basics_7b4.cpp  tree_basics_7b5.cpp
